<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuMorning"
            android:title="@string/menuMorning" />
        <item
            android:id="@+id/menuEvening"
            android:title="@string/menuEvening" />
        <item
            android:id="@+id/menuCanonLord"
            android:title="@string/menuCanonLord" />
        <item
            android:id="@+id/menuCanonGodMother"
            android:title="@string/menuCanonGodMother" />
        <item
            android:id="@+id/menuCanonAngel"
            android:title="@string/menuCanonAngel" />
        <item
            android:id="@+id/menuAkafistLord"
            android:title="@string/menuAkafistLord" />
        <item
            android:id="@+id/menuAkafistGodMother"
            android:title="@string/menuAkafistGodMother" />
        <item
            android:id="@+id/menuAkafistNikolay"
            android:title="@string/menuAkafistNikolay" />
        <item
            android:id="@+id/menuBeforPrichastie"
            android:title="@string/menuBeforPrichastie" />
        <item
            android:id="@+id/menuAfterPrichastie"
            android:title="@string/menuAfterPrichastie" />
        <item
            android:id="@+id/menuPashaTimes"
            android:title="@string/menuPashaTimes" />
        <item
            android:id="@+id/menuVoiny"
            android:title="@string/menuVoiny"/>
    </group>
</menu>